--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_DEBUG=true
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=gama_db
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=gama_db
-DB_USERNAME=gama_user
-DB_PASSWORD=gama_user
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
